2003-03-09  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.h,src/gerber.c: angles are floats.

2003-03-01  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.[hc], gerber.c: Redesigned step-and-repeat
	  parser. And when I was at it I also cleaned up new_gerb_image()
	  a bit.

2003-03-03  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_gdk.c: one-pixel overshoot bug fixed by Holger.

2003-02-28  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Holger made a patch that allows to switch between 
	  edge- and centered zoom by tapping on shift while moving the 
	  mouse and keeping the right button pressed.
 
	* src/draw_gdk.c: Holger ensured that all rectangles and lines 
	  are at least one pixel wide - so they won't just disappear 
	  with zooming...

2003-02-26  Stefan Petersen  <spe@stacken.kth.se>

	* Branched BRANCH_render_1
	* Added huge patch from Holger Waechtler that extracts the GTK/GDK 
	  specific things for the render (hence the branch name).

2003-02-24  Stefan Petersen  <spe@stacken.kth.se>

	* src/Makefile.am,src/gerbv.c,src/gerbv_screen.h,src/log.c,
	  src/setup.[hc]: Added setup to handle all things that can
	  be setup by commandline or (future) rc files. We have the
	  screen variable, but some didn't think it was appropriate
	  to add setup things to.

2003-02-22  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Changed comparision if two angles are equal
	  to double since Dan McMahill discovered a case where the difference
	  between the angles were actually less than 0.5 degrees.  
	  Closes bug #689663.

	* src/gerbv.c: I you tried to swap layer with an unused layer 
	  gerbv segfaulted. Also discovered by Dan McMahill. Cudos to him
	  as usual... Closes bug #689667.
	
2003-02-12  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: A patch from Peter Monta for incremental
	  coordinates. He also discovered that I had made a mistake
	  when parsing incremental/absolute coordinates.

-- Release 0.12 --
